# FinalProject_dibimbing

./: DataCleaning_FP.ipynb  Fadllun_Amir_Alfitri_Progress_Script_Final_Project.ipynb  Readme.txt  Teskbook.txt  games_cluster.csv  games_cluster.xlsx  genres.csv  pilot.py  pyproject.toml  requirement.txt  requirements.txt  steamgames.htm
