[tool.poetry]
name = "segmentation env"
version = "0.1.0"
description = "untuk segmentation dan recommendation system"
authors = ["delun"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
pandas = "^2.2.2"
altair = "^5.3.0"
streamlit-option-menu = "^0.3.13"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
